--- a/_includes/essentials/head.html
+++ b/_includes/essentials/head.html
@@ -3,5 +3,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% include essentials/og.html%}
   {{site.data.settings.configuration.head_code_block}}
-  <link rel="stylesheet" href="style/main.css">
+  <link rel="stylesheet" href="/style/main.css">
 </head>
