--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
   <html lang="en">
     {% include essentials/head.html %}
     <body class="min-h-screen flex flex-col overflow-x-hidden">
-      <div class="flex-1">
+      <div class="flex-1 md:py-8">
         {{ content }}
       </div>
       {{site.data.settings.configuration.body_code_block}}
