--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -3,7 +3,7 @@ layout: default
 description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur est aperiam, asperiores nobis veniam voluptatem sit unde illo quae reiciendis, possimus ipsum, mollitia beatae officiis magnam distinctio numquam nisi laborum?
 ---
 <div class="container mx-auto mb-6">
-  <a href="/" class="relative font-body text-2xl font-light underline text-yellow-400">Voltar à Página Inicial</a>
+  <a href="/" class="relative font-body text-lg py-2 md:text-2xl font-light underline text-yellow-400">Voltar à Página Inicial</a>
   <h1 class="font-bold font-heading text-6xl md:text-9xl text-yellow-400 uppercase mb-8">Reconecta</h1>
 </div>
 {% assign pname = page.artist %}
