--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -3,7 +3,10 @@ layout: default
 description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur est aperiam, asperiores nobis veniam voluptatem sit unde illo quae reiciendis, possimus ipsum, mollitia beatae officiis magnam distinctio numquam nisi laborum?
 ---
 <div class="container mx-auto mb-6">
-  <a href="/" class="relative font-body text-base p-2 md:text-2xl font-light underline text-yellow-400">Voltar à Página Inicial</a>
+  <a href="/" class="relative font-body text-base p-2 md:text-2xl font-light underline text-yellow-400"><svg xmlns="http://www.w3.org/2000/svg" height="48" width="48" fill="rgb(251, 191, 36)">
+    <path
+      d="M8 42V18L24.1 6L40 18V42H28.3V27.75H19.65V42ZM11 39H16.65V24.75H31.3V39H37V19.5L24.1 9.75L11 19.5ZM24 24.35Z" />
+  </svg></a>
   <h1 class="font-bold font-heading text-6xl md:text-9xl text-yellow-400 uppercase mb-8">Reconecta</h1>
 </div>
 {% assign pname = page.artist %}
@@ -20,14 +23,14 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
     </div>
     <p class="text-xl lg:text-2xl font-light">{{page.description | prepend: '"' | append: '"' }}</p>    
     <div class="flex flex-col gap-2">
-      <h1 class="font-bold text-4xl border-b-4 border-blue-900">{{page.title}}</h1>
-      <p class="font-semibold text-blue-900">{{artist.name | prepend: "Por "}}</p>      
+      <h1 class="font-bold text-4xl border-b-4 border-yellow-500">{{page.title}}</h1>
+      <p class="font-semibold text-yellow-600">{{artist.name | prepend: "Por "}}</p>      
       <p class="">{{page.dimensions | prepend: "Dimensões: "}}</p>
       <p>{{page.print_standard | prepend: 'Impressão em '}}</p>
       <p class="font-bold text-2xl">{{page.price | prepend: "R$"}}</p>
       <div class="">
-        <a href="mailto:{{creator.email}}" target="_blank" class="px-3 py-2 inline-block text-gray-50 bg-blue-600 uppercase">
-          Tenho interesse
+        <a href="mailto:{{creator.email}}" target="_blank" class="px-3 py-2 inline-block text-gray-700 bg-yellow-400 hover:bg-yellow-700 transition-colors uppercase">
+          Entre em contato
         </a>
       </div>
     </div>
@@ -39,7 +42,7 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
       <div class="rounded-full h-32 w-32 overflow-hidden" >
         {% picture jpt-webp "{{artist.profile_image | default: '/assets/images/user.png' }}" --picture class="object-cover w-full h-full" --img alt="{{artist.name}} foto de perfil" %}        
       </div>
-      <h2 class="font-bold text-4xl text-gray-200 border-b-2 border-blue-400">
+      <h2 class="font-bold text-4xl text-gray-200 border-b-2 border-yellow-500">
         {{artist.name}}
       </h2>
       <div class="flex flex-row items-center justify-items-start gap-3">
@@ -61,7 +64,7 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
       <div class="rounded-full h-32 w-32 overflow-hidden" >
         {% picture jpt-webp "{{coartist.profile_image | default: '/assets/images/user.png' }}" --picture class="object-cover w-full h-full" --img alt="{{coartist.name}} foto de perfil" %}        
       </div>
-      <h2 class="font-bold text-4xl text-gray-200 border-b-2 border-blue-400">
+      <h2 class="font-bold text-4xl text-gray-100 border-b-2 border-white-400">
         {{coartist.name}}
       </h2>
       <div class="flex flex-row items-center justify-items-start gap-3">
@@ -73,23 +76,34 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
         </a>
       </div>
     </div>
-    <p class="font-light text-gray-200">{{coartist.bio}}</p>
+    <p class="font-body font-light text-gray-50">{{coartist.bio}}</p>
   </div>
 </section>
 {% endfor %}
 <section class="container mx-auto py-12 px-12 bg-gray-100 md:border-2 border-gray-500 md:rounded-md shadow-lg">
-  <h2 class="font-bold text-2xl mb-6 text-blue-900 uppercase">Mais imagens por {{artist.name}}:</h2>  
+  <h2 class="font-bold text-2xl mb-6 text-yellow-600 uppercase">Mais imagens por {{artist.name}}:</h2>  
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
     {% assign other_images = site.art | where_exp: "item", "item.artist contains pname"%}
     {% for item in other_images %}
-    <a href="{{item.url}}" class="col-span-1 shadow-lg">
+    <a href="{{item.url}}" class="col-span-1 shadow-lg transform hover:shadow-2xl hover:-translate-y-1 transition-all">
       <div class="flex flex-col">
         <div class="h-30 lg:h-40 overflow-hidden rounded-t-md" >
           <img src="{{item.image}}" alt="" class="object-cover w-full h-full">
         </div>
-        <div class="flex flex-col gap-4 bg-gray-300 p-6">
-          <h3 class="font-bold text-xl">{{item.title}}</h3>
-          <p>{{item.dimensions}}</p>
+        <div class="flex flex-col gap-4 bg-gray-300 p-6 rounded-b-md">
+          <h3 class="font-bold text-2xl">{{item.title}}</h3>
+          <div class="flex gap-2">
+            <p class="font-body">
+              {{item.dimensions}}
+            </p>
+            <span>|</span>
+            <p class="font-body">
+              Tiragem limitada 1/{{item.number_of_prints}}
+            </p>
+          </div>
+          <p class="font-body">
+            Impressão em papel {{item.print_standard}}
+          </p>
         </div>
       </div>
     </a>
