--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -3,11 +3,11 @@ layout: default
 description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur est aperiam, asperiores nobis veniam voluptatem sit unde illo quae reiciendis, possimus ipsum, mollitia beatae officiis magnam distinctio numquam nisi laborum?
 ---
 <div class="container mx-auto mb-6">
-  <a href="/" class="relative font-body text-base p-2 md:text-2xl font-light underline text-yellow-400"><svg xmlns="http://www.w3.org/2000/svg" height="48" width="48" fill="rgb(251, 191, 36)">
+  <a href="/" class="relative font-body text-base p-4 md:text-2xl font-light underline text-yellow-400"><svg xmlns="http://www.w3.org/2000/svg" height="48" width="48" fill="rgb(251, 191, 36)">
     <path
       d="M8 42V18L24.1 6L40 18V42H28.3V27.75H19.65V42ZM11 39H16.65V24.75H31.3V39H37V19.5L24.1 9.75L11 19.5ZM24 24.35Z" />
   </svg></a>
-  <h1 class="font-bold font-heading text-6xl md:text-9xl text-yellow-400 uppercase mb-8">Reconecta</h1>
+  <!-- <h1 class="font-bold font-heading text-6xl md:text-9xl text-yellow-400 uppercase mb-8">Reconecta</h1> -->
 </div>
 {% assign pname = page.artist %}
 {% assign coname = page.co-artist %}
@@ -23,7 +23,7 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
     </div>
     <p class="text-xl lg:text-2xl font-light">{{page.description | prepend: '"' | append: '"' }}</p>    
     <div class="flex flex-col gap-2">
-      <h2 class="font-bold text-4xl border-b-4 border-yellow-500">{{page.title}}</h2>
+      <h1 class="font-bold text-4xl border-b-4 border-yellow-500">{{page.title}}</h1>
       <p class="font-semibold text-yellow-600">{{artist.name | prepend: "Por "}}</p>      
       <p class="font-body">{{page.dimensions | prepend: "Dimensões: "}}</p>
       <p class="font-body">{{page.print_standard | prepend: 'Impressão em '}}</p>
