--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,9 @@
     <body class="min-h-screen flex flex-col overflow-x-hidden bg-gray-800">
       <div class="flex-1 md:py-8">
         {{ content }}
+        <div class="container mx-auto">
+          <p class="text-sm text-yellow-400 font-body font-light">Todas as imagens e textos sob copyright dos artistas.</p>
+        </div>
       </div>
       {{site.data.settings.configuration.body_code_block}}
       {% include essentials/scripts.html %}
