Add padding to copyright notice

--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -107,15 +107,15 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
         <div class="flex flex-col gap-4 bg-gray-300 p-6 rounded-b-md">
           <h3 class="font-bold text-2xl">{{item.title}}</h3>
           <div class="flex gap-2">
-            <p class="font-body">
+            <p class="text-xs sm:text-sm font-body font-light">
               {{item.dimensions}}
             </p>
             <span>|</span>
-            <p class="font-body">
+            <p class="text-xs sm:text-sm font-body font-light">
               Tiragem limitada 1/{{item.number_of_prints}}
             </p>
           </div>
-          <p class="font-body">
+          <p class="text-xs sm:text-sm font-body font-light">
             Impressão em papel {{item.print_standard}}
           </p>
         </div>
