Improvee styles, add artist names

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
       <div class="flex-1 md:py-8">
         {{ content }}
         <div class="container mx-auto py-4 px-4">
-          <p class="text-sm text-yellow-400 font-body font-light">Todas as imagens e textos sob copyright dos artistas.</p>
+          <p class="text-sm text-yellow-400 font-body font-light mb-2">Todas as imagens e textos sob copyright dos artistas.</p>
+          <p class="text-sm text-yellow-400 font-body font-light">Website desenvolvido por <a id="mail-to" href="mailto:hello@itsgus.dev" class="text-green-400 hover:text-green-600 transition-colors font-regular">Criativo Sonar</a>.</p>
         </div>
       </div>
       {{site.data.settings.configuration.body_code_block}}
