--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -18,34 +18,34 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
     </div>
     <p class="text-xl lg:text-2xl font-light">{{page.description | prepend: '"' | append: '"' }}</p>    
     <div class="flex flex-col gap-2">
-      <h1 class="font-bold text-4xl border-b-4 border-yellow-500">{{page.title}}</h1>
-      <div class="">
-        <p class="font-semibold text-yellow-600">{{artist.name | prepend: "Imagem de "}}</p>  
+      <h1 class="feat-image-title">{{page.title}}</h1>
+      <div>
+        <p class="feat-image-artist">{{artist.name | prepend: "Imagem de "}}</p>  
         {% for co in cocreator %}    
-        <p class="font-semibold text-yellow-600">{{co.name | prepend: "Texto por "}}</p>
+        <p class="feat-image-artist">{{co.name | prepend: "Texto por "}}</p>
         {% endfor %}      
       </div>
-      <p class="font-body text-lg font-bold">{{page.dimensions | prepend: "Dimensões: "}}</p>
-      <p class="font-body">{{page.print_standard | prepend: 'Impressão em '}}</p>
-      <p class="font-body">{{page.number_of_prints | prepend: 'Tiragem limitada a ' | append: ' impressões'}}</p>
+      <p class="text-lg font-bold">{{page.dimensions | prepend: "Dimensões: "}}</p>
+      <p>{{page.print_standard | prepend: 'Impressão em '}}</p>
+      <p>{{page.number_of_prints | prepend: 'Tiragem limitada a ' | append: ' impressões'}}</p>
 
       <div class="flex gap-2 items-center mb-5">
-        <p class="font-body">Qualidade </p>
+        <p>Qualidade </p>
         <div class="w-24">
           {% picture jpt-webp "/assets/images/farbewerk.png" --img alt="farbewerk logo" class="object-contain w-full h-full"%}          
         </div>
       </div>
-      <p class="font-bold text-3xl ">{{page.price | prepend: "R$"}}</p>
+      <p class="feat-image-price">{{page.price | prepend: "R$"}}</p>
       <div class="mb-6">
         <a href="mailto:{{creator.email}}" target="_blank" class="px-3 py-2 inline-block text-gray-700 bg-yellow-400 hover:bg-yellow-700 transition-colors uppercase">
           Entre em contato
         </a>
       </div>
-      <p class="font-body text-xs">
+      <p class="text-xs">
         Imagem © {{artist.name}} | Todos os direitos reservados.
       </p>
       {% for co in cocreator %}
-      <p class="font-body text-xs">{{co.name | prepend: "Texto © " | append: ' | Todos os direitos reservados.'}}</p>
+      <p class="text-xs">{{co.name | prepend: "Texto © " | append: ' | Todos os direitos reservados.'}}</p>
       {% endfor %}
     </div>
   </div>  
@@ -60,7 +60,7 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
         {{artist.name}}
       </h2>
       <div class="flex flex-row items-center justify-items-start gap-3">
-        <a href="{{creator.website}}" class="w-8 h-8">
+        <a href="{{creator.website | default: '/'}}" class="w-8 h-8">
           <img src="/assets/graphics/language_FILL0_wght400_GRAD0_opsz48.svg" alt="" class="object-cover w-full h-full">
         </a>
         <a href="https://instagram.com/{{creator.instagram}}" class="w-8 h-8">
@@ -82,7 +82,7 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
         {{coartist.name}}
       </h2>
       <div class="flex flex-row items-center justify-items-start gap-3">
-        <a href="{{coartist.website}}" class="w-8 h-8">
+        <a href="{{coartist.website | default: '/'}}" class="w-8 h-8">
           <img src="/assets/graphics/language_FILL0_wght400_GRAD0_opsz48.svg" alt="" class="object-cover w-full h-full">
         </a>
         <a href="https://instagram.com/{{coartist.instagram}}" class="w-8 h-8">
@@ -90,7 +90,7 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
         </a>
       </div>
     </div>
-    <p class="font-body font-light text-gray-50">{{coartist.bio}}</p>
+    <p class="font-light text-gray-50">{{coartist.bio}}</p>
   </div>
 </section>
 {% endfor %}
@@ -107,15 +107,15 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
         <div class="flex flex-col justify-between gap-4 bg-gray-300 p-6 rounded-b-md">
           <h3 class="font-bold text-2xl">{{item.title}}</h3>
           <div class="flex gap-2">
-            <p class="text-xs sm:text-sm font-body font-light">
+            <p class="art-info-text">
               {{item.dimensions}}
             </p>
             <span>|</span>
-            <p class="text-xs sm:text-sm font-body font-light">
+            <p class="art-info-text">
               Tiragem limitada 1/{{item.number_of_prints}}
             </p>
           </div>
-          <p class="text-xs sm:text-sm font-body font-light">
+          <p class="art-info-text">
             Impressão em papel {{item.print_standard}}
           </p>
         </div>
