--- a/_sass/_universal.scss
+++ b/_sass/_universal.scss
@@ -14,9 +14,62 @@ span {
   @apply
   font-body;
 }
+
+.atf-text {
+  @apply
+  text-white
+  font-body
+  text-3xl
+  uppercase
+  tracking-widest
+  flex-1;
+}
+
+.atf-artist {
+  @apply
+  font-heading
+  uppercase
+  text-lg
+  md:text-xl;
+}
+
 .art-card:hover {
   box-shadow: 0 4px 8px 0 rgba(251, 251, 251, 0.2), 0 6px 20px 0 rgba(251, 251, 251, 0.19);
   transition: 0.33s cubic-bezier(0.19, 1, 0.22, 1);
   transform: translateY(-2px);
+}
 
+
+.art-info-text {
+  @apply
+  text-xs
+  sm:text-sm  
+  font-light;
+}
+
+.feat-image-title {
+  @apply
+  font-bold
+  text-4xl
+  border-b-4
+  border-yellow-500;
+}
+.feat-image-artist {
+  @apply
+  font-semibold
+  text-yellow-600;
+}
+.feat-image-price {
+  @apply
+  font-bold
+  text-3xl;
+}
+.partner-logo {
+  @apply
+  md:flex-1
+  flex-shrink-0
+  sm:flex-shrink
+  w-40
+  md:w-20
+  mx-auto;
 }
