Add checkout flow

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,6 @@
       </div>
       {{site.data.settings.configuration.body_code_block}}
       {% include essentials/scripts.html %}
+      {{page.scripts_code_block}}
     </body>
   </html>
