--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur est aperiam, asperiores nobis veniam voluptatem sit unde illo quae reiciendis, possimus ipsum, mollitia beatae officiis magnam distinctio numquam nisi laborum?
+description: Imagens de artistas curitibanos expostas durante a exposição RECONETA! no The Oak Wine e Beer
 ---
 <div class="container mx-auto mb-2">
   <a href="/" class="inline-block font-body text-base p-4 md:text-2xl font-light underline text-yellow-400 w-16"><img src="/assets/graphics/home_FILL0_wght400_GRAD0_opsz48.svg" alt="home icon" class="object-contain w-full h-full"></a>  
@@ -13,32 +13,41 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
 
 <main class="container mx-auto px-12 py-12 bg-gray-100 md:border-2 border-gray-500 shadow-lg md:rounded-md md:mb-6">
   <div class="flex flex-col gap-8 mb-6">    
-    <div class="h-50 md:h-auto overflow-hidden rounded-md flex-shrink-0" >
-      {% picture jpt-webp "{{page.image | default: '/assets/images/placeholder.jpg'}}" --picture class="object-contain w-full h-full" %}
+    <div class="h-50 md:h-96 overflow-hidden rounded-md flex-shrink-0" >
+      {% picture jpt-webp "{{page.image | default: '/assets/images/placeholder.jpg'}}" --img id="img-src" class="object-cover md:object-contain w-full h-full" %}
     </div>
     <p class="text-xl lg:text-2xl font-light">{{page.description | prepend: '"' | append: '"' }}</p>    
     <div class="flex flex-col gap-2">
-      <h1 class="feat-image-title">{{page.title}}</h1>
+      <h1 id="feat-img" class="feat-image-title" data-feat-img-title="{{page.title}}">{{page.title}}</h1>
       <div>
         <p class="feat-image-artist">{{artist.name | prepend: "Imagem de "}}</p>  
         {% for co in cocreator %}    
         <p class="feat-image-artist">{{co.name | prepend: "Texto por "}}</p>
         {% endfor %}      
       </div>
-      <p class="text-lg font-bold">{{page.dimensions | prepend: "Dimensões: "}}</p>
-      <p>{{page.print_standard | prepend: 'Impressão em '}}</p>
-      <p>{{page.number_of_prints | prepend: 'Tiragem limitada a ' | append: ' impressões'}}</p>
+      <p class="text-lg font-bold">Especificações:</p>
+      <ul>
+        <li id="art-dimensions" class="list-inside list-disc">{{page.dimensions | prepend: "Dimensões: "}}</li>
+        <li id="art-standard" class="list-inside list-disc">{{page.print_standard | prepend: 'Impressão em papel '}}</li>
+        <li class="list-inside list-disc">Montagem com vidro anti-reflexo</li>        
+        <li id="art-prints" class="list-inside list-disc">{{page.number_of_prints | prepend: 'Tiragem limitada a ' | append: ' impressões'}}</li>      
+      </ul>
 
       <div class="flex gap-2 items-center mb-5">
-        <p>Qualidade </p>
+        <p>Impressões com qualidade </p>
         <div class="w-24">
           {% picture jpt-webp "/assets/images/farbewerk.png" --img alt="farbewerk logo" class="object-contain w-full h-full"%}          
         </div>
       </div>
-      <p class="feat-image-price">{{page.price | prepend: "R$"}}</p>
-      <div class="mb-6">
-        <a href="mailto:{{creator.email}}" target="_blank" class="px-3 py-2 inline-block text-gray-700 bg-yellow-400 hover:bg-yellow-700 transition-colors uppercase">
-          Entre em contato
+      <p id="art-price" class="feat-image-price">{{page.price | prepend: "R$" }}</p>
+      <div class="flex gap-2 mb-6">
+        <a id="checkout-btn" href="/checkout" class="px-3 py-2 inline-flex items-center text-gray-700 bg-yellow-400 hover:bg-yellow-200 transition-colors uppercase">
+          Compre agora
+        </a>
+        <a href="https://wa.me/{{creator.whatsapp}}" target="_blank" class="px-3 py-2 inline-flex items-center gap-1 text-gray-700 border-2 border-yellow-400 hover:bg-yellow-600 transition-colors uppercase">Entre em contato 
+          <div class="inline-block w-4 h-4">
+            {% include social-icons.html icon="WhatsApp" fill="#333" %}
+          </div>
         </a>
       </div>
       <p class="text-xs">
@@ -56,7 +65,7 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
       <div class="rounded-full h-32 w-32 overflow-hidden" >
         {% picture jpt-webp "{{artist.profile_image | default: '/assets/images/user.png' }}" --picture class="object-cover w-full h-full" --img alt="{{artist.name}} foto de perfil" %}        
       </div>
-      <h2 class="font-bold text-4xl text-gray-200 border-b-2 border-yellow-500">
+      <h2 id="artist-name" class="font-bold text-4xl text-gray-200 border-b-2 border-yellow-500" data-email="{{artist.email}}">
         {{artist.name}}
       </h2>
       <div class="flex flex-row items-center justify-items-start gap-3">
@@ -125,3 +134,34 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur 
   </div>
 </section>
 {% endfor %}
+<script>
+  const imgId = document.getElementById('feat-img');
+  const imgSrc = document.getElementById('img-src');
+  const imgDimensions = document.getElementById('art-dimensions');
+  const imgStandard = document.getElementById('art-standard');
+  const imgPrice = document.getElementById('art-price');
+  const imgAuthor = document.getElementById('artist-name');
+  let imgTitle = imgId.dataset.featImgTitle;
+  let imgUrl = imgSrc.src;
+  let price = imgPrice.innerText;
+  let dimensions = imgDimensions.innerText;
+  let standard = imgStandard.innerText;
+  let artist = imgAuthor.innerText;
+  let email = imgAuthor.dataset.email;
+  let artInfo = {
+    "title": imgTitle,
+    "email": email,
+    "author": artist,
+    "src": imgUrl,
+    "price": price,
+    "dimensions": dimensions,
+    "standard": standard
+  }    
+  
+  const checkoutBtn = document.getElementById('checkout-btn');
+
+  checkoutBtn.addEventListener('click', function(){        
+    let artJSON = JSON.stringify(artInfo);
+    sessionStorage.setItem('image',artJSON);
+  });
+</script>
