Add checkout flow

--- a/_sass/_universal.scss
+++ b/_sass/_universal.scss
@@ -76,11 +76,12 @@ span {
 
 .checkout-form {
   @apply
-  
   flex
   flex-col
   gap-2;  
-  input {
+  input,
+  select,
+  textarea {
     @apply
     font-body
     p-2
