--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -44,7 +44,7 @@ description: Imagens de artistas curitibanos expostas durante a exposição RECO
         <a id="checkout-btn" href="/checkout" class="px-3 py-2 inline-flex items-center text-gray-700 bg-yellow-400 hover:bg-yellow-200 transition-colors uppercase">
           Compre agora
         </a>
-        <a href="https://wa.me/{{creator.whatsapp}}" target="_blank" class="px-3 py-2 inline-flex items-center gap-1 text-gray-700 border-2 border-yellow-400 hover:bg-yellow-600 transition-colors uppercase">Entre em contato 
+        <a id="wa-tel" href="https://wa.me/{{artist.whatsapp}}" target="_blank" class="px-3 py-2 inline-flex items-center gap-1 text-gray-700 border-2 border-yellow-400 hover:bg-yellow-600 transition-colors uppercase">Entre em contato 
           <div class="inline-block w-4 h-4">
             {% include social-icons.html icon="WhatsApp" fill="#333" %}
           </div>
@@ -65,7 +65,7 @@ description: Imagens de artistas curitibanos expostas durante a exposição RECO
       <div class="rounded-full h-32 w-32 overflow-hidden" >
         {% picture jpt-webp "{{artist.profile_image | default: '/assets/images/user.png' }}" --picture class="object-cover w-full h-full" --img alt="{{artist.name}} foto de perfil" %}        
       </div>
-      <h2 id="artist-name" class="font-bold text-4xl text-gray-200 border-b-2 border-yellow-500" data-email="{{artist.email}}" data-payment-code="{{artist.pixCode}}">
+      <h2 id="artist-name" class="font-bold text-4xl text-gray-200 border-b-2 border-yellow-500" data-email="{{artist.email}}" data-wa="{{artist.whatsapp}}" data-payment-code="{{artist.pixCode}}">
         {{artist.name}}
       </h2>
       <div class="flex flex-row items-center justify-items-start gap-3">
@@ -140,7 +140,7 @@ description: Imagens de artistas curitibanos expostas durante a exposição RECO
   const imgDimensions = document.getElementById('art-dimensions');
   const imgStandard = document.getElementById('art-standard');
   const imgPrice = document.getElementById('art-price');
-  const imgAuthor = document.getElementById('artist-name');
+  const imgAuthor = document.getElementById('artist-name');  
   let imgTitle = imgId.dataset.featImgTitle;
   let imgUrl = imgSrc.src;
   let price = imgPrice.innerText;
@@ -148,10 +148,12 @@ description: Imagens de artistas curitibanos expostas durante a exposição RECO
   let standard = imgStandard.innerText;
   let artist = imgAuthor.innerText;
   let email = imgAuthor.dataset.email;
+  let wa = imgAuthor.dataset.wa;  
   let code = imgAuthor.dataset.paymentCode;
   let artInfo = {
     "title": imgTitle,
     "email": email,
+    "whatsapp": wa,
     "author": artist,
     "src": imgUrl,
     "price": price,
