--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -40,7 +40,7 @@ description: Imagens de artistas curitibanos expostas durante a exposição RECO
         </div>
       </div>
       <p id="art-price" class="feat-image-price">{{page.price | prepend: "R$" }}</p>
-      <div class="flex gap-2 mb-6">
+      <div class="flex flex-col md:flex-row gap-2 mb-6">
         <a id="checkout-btn" href="/checkout" class="px-3 py-2 inline-flex items-center text-gray-700 bg-yellow-400 hover:bg-yellow-200 transition-colors uppercase">
           Compre agora
         </a>
