--- a/_includes/essentials/og.html
+++ b/_includes/essentials/og.html
@@ -10,12 +10,12 @@
 <meta property="og:image:width" content="600" />
 <meta property="og:image:alt" content="{{page.preview_image_alt_text}}" />
 <meta property="og:site_name" content="{{ site.data.settings.branding.site_title }}">
-<meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.data.settings.seo.site_description_text }}{% endif %}">
+<meta property="og:description" content="{% if page.description_html %}{{ page.description_html }}{% else %}{{ site.data.settings.seo.site_description_text }}{% endif %}">
 <!-- <meta property="fb:app_id" content="{{site.data.settings.seo.fb_app_id}}"> -->
 
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="{%if page.title %}{{ page.title }}{% else %}{{ site.data.settings.branding.site_title }}{% endif %}">
-<meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.data.settings.seo.site_description_text }}{% endif %}">
+<meta name="twitter:description" content="{% if page.description_html %}{{ page.description_html }}{% else %}{{ site.data.settings.seo.site_description_text }}{% endif %}">
 <meta name="twitter:site" content="{{site.data.settings.general.twitter_handle}}" />
 <meta name="twitter:creator" content="{{site.data.settings.general.twitter_handle}}">
 <meta name="twitter:card" content="summary">
