--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: Imagens de artistas curitibanos expostas durante a exposição RECONETA! no The Oak Wine e Beer
+description_html: Imagens de artistas curitibanos expostas durante a exposição RECONETA! no The Oak Wine e Beer
 ---
 <div class="container mx-auto mb-2">
   <a href="/" class="inline-block font-body text-base p-4 md:text-2xl font-light underline text-yellow-400 w-16"><img src="/assets/graphics/home_FILL0_wght400_GRAD0_opsz48.svg" alt="home icon" class="object-contain w-full h-full"></a>  
@@ -16,7 +16,7 @@ description: Imagens de artistas curitibanos expostas durante a exposição RECO
     <div class="h-50 md:h-96 overflow-hidden rounded-md flex-shrink-0" >
       {% picture jpt-webp "{{page.image | default: '/assets/images/placeholder.jpg'}}" --img id="img-src" class="object-cover md:object-contain w-full h-full" %}
     </div>
-    <p class="text-xl lg:text-2xl font-light">{{page.description | prepend: '"' | append: '"' }}</p>    
+    <p class="text-xl lg:text-2xl font-light">{{page.description_html | prepend: '"' | append: '"' }}</p>    
     <div class="flex flex-col gap-2">
       <h1 id="feat-img" class="feat-image-title" data-feat-img-title="{{page.title}}">{{page.title}}</h1>
       <div>
