--- a/_layouts/photo.html
+++ b/_layouts/photo.html
@@ -27,10 +27,10 @@ description_html: Imagens de artistas curitibanos expostas durante a exposição
       </div>
       <p class="text-lg font-bold">Especificações:</p>
       <ul>
-        <li id="art-dimensions" class="list-inside list-disc">{{page.dimensions | prepend: "Dimensões: "}}</li>
-        <li id="art-standard" class="list-inside list-disc">{{page.print_standard | prepend: 'Impressão em papel '}}</li>
-        <li class="list-inside list-disc">Montagem com vidro anti-reflexo</li>        
-        <li id="art-prints" class="list-inside list-disc">{{page.number_of_prints | prepend: 'Tiragem limitada a ' | append: ' impressões'}}</li>      
+        <li id="art-dimensions" class="text-sm list-inside list-disc">{{page.dimensions | prepend: "Dimensões: "}}</li>
+        <li id="art-standard" class="text-sm list-inside list-disc">{{page.print_standard | prepend: 'Impressão em papel '}}</li>
+        <li class="text-sm list-inside list-disc">Montagem com vidro anti-reflexo</li>        
+        <li id="art-prints" class="text-sm list-inside list-disc">{{page.number_of_prints | prepend: 'Tiragem limitada a ' | append: ' impressões'}}</li>      
       </ul>
 
       <div class="flex gap-2 items-center mb-5">
